Bug 1487785 - Add pointer cursor to expand badge and vertically align badges; r=gl
UltraBlame original commit: 5a300e2e151704405cba1d86e2a374fd1ea3ef3c

--- a/devtools/client/themes/markup.css
+++ b/devtools/client/themes/markup.css
@@ -1251,6 +1251,39 @@ markup
 expand
 -
 badge
+{
+cursor
+:
+pointer
+;
+display
+:
+inline
+-
+block
+;
+vertical
+-
+align
+:
+-
+3px
+;
+padding
+:
+2px
+;
+}
+.
+expandable
+.
+collapsed
+.
+markup
+-
+expand
+-
+badge
 :
 :
 before
@@ -1359,16 +1392,8 @@ interactive
 color
 )
 ;
-vertical
--
-align
-:
-middle
-;
 display
 :
-inline
--
 block
 ;
 width
@@ -1378,11 +1403,6 @@ width
 height
 :
 8px
-;
-margin
-:
-0
-2px
 ;
 line
 -
@@ -2116,7 +2136,9 @@ vertical
 -
 align
 :
-1px
+0
+.
+5px
 ;
 border
 :
@@ -2215,6 +2237,12 @@ font
 size
 :
 9px
+;
+vertical
+-
+align
+:
+1px
 ;
 }
 }
